syntax = "proto3";

package omogen.runner;

enum Verdict {
  VERDICT_UNSPECIFIED = 0;

  ACCEPTED = 1;

  TIME_LIMIT_EXCEEDED = 2;

  WRONG_ANSWER = 3;

  RUN_TIME_ERROR = 4;
}

message TestGroup {
  repeated TestCase cases = 1;
  int32 score = 2;
  repeated string output_validator_flags = 3;
}

message TestCase {
  string name = 1;
  string input_path = 2;
  string output_path = 3;
}

message TestCaseResult {
  Verdict verdict = 1;
  int32 time_usage_ms = 2;
  int32 score = 3;
}

message TestGroupResult {
  Verdict verdict = 1;
  int32 time_usage_ms = 2;
  int32 score = 3;
}

message SubmissionResult {
  Verdict verdict = 1;
  int32 time_usage_ms = 2;
  int32 score = 3;
}
